# codewars

./: Cargo.toml  NumberThatAreAPowerOfTheSumOfTheirDigits.rs  readme.txt
completed/: 1_ExpressionsMatter.rs  2_persistentBugger.rs  3_SplitString.rs  4_IPValidation.rs  5_UniqueInOrder.rs  6_FindTheDivisor.rs  7_MovingZerosToTheEnd.rs  8_PascalsDiagonal.rs
