[package]
name = "Kata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
primes = "0.3.0"
num = "^0.1.0" 

[[bin]]
name = "test"
path = "/home/ddr/Repos/SandBox/Rust/Kata/NumberThatAreAPowerOfTheSumOfTheirDigits.rs"
